feat: add skinsrestorer integration